--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,15 +25,15 @@
       <h3>Welcome to the weather information app!</h3>
       <form action="/submit" method="post">
         <input type="text" name="location" placeholder="Enter your location">
-        <button type="submit">Submit</button>
+        <button type="submit" >Submit</button>
       </form>
        
         </div>
 
-        <div class="form-group mb-2">
+        <div class="displayinfo">
           
-
-        </div>
+          
+</div>
       
       
     </main>
