Remove comments, fix indentation, add additonal comemnts, convert error handleing to on page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,74 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  
-  
-    <!-- Bootstrap CSS -->
-    
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
-      </style>
-    <title>LimeWeather</title>
-  </head>
+<!-- Head -->
 
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <!-- Styling and Fonts-->
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+  </style>
+  <title>LimeWeather</title>
+</head>
+
+<!--Header-->
 <header>
-  
   <nav class="navbar">
-    
-    <a class="navcontent" href="/"><h1>Lime Spot Weather API Project</h1> </a>
-    <a class="gitaddress" href="https://github.com/WilWadman" target="_blank"><h1>Will's Github</h1> </a>
-   
-  </header>
+    <a class="navcontent" href="/">
+      <h1>Lime Spot Weather API Project Home</h1>
+    </a>
+    <a class="gitaddress" href="https://github.com/WilWadman" target="_blank">
+      <h1>Will's Github</h1>
+    </a>
+</header>
 
 
+<!-- body -->
 
 <body class="body">
   <main style="margin: 1em;">
-    
+    <!-- Form -->
     <div class="welcomebar">
       <h1>Welcome to the weather information app!</h1>
-       <form action="/submit" method="post">
+      <form action="/submit" method="post">
         <h1></h1><input class="textarea" type="text" name="location" placeholder="Please enter your location here"></h1>
         <br>
         <br>
-        <button class="submitbutton" type="submit" >Submit</button>
+        <button class="submitbutton" type="submit">Submit</button>
       </form>
     </div>
     <br>
- 
-       
-        </div>
-        <% if (typeof data1 !== 'undefined') { %>
-          <div class="allinfo">
-          <div class="weatherdetails">
-            <h1>Weather for <%= data1.name %></h1>
-            <p>Your Location's Temperature: <%= ((data1.main.temp - 273.15) * 1.8 + 32).toFixed(2) %>°F</p>
-            <p>Your Location's Humidity: <%= data1.main.humidity %>%</p>
-            <p>Your Location's Current Weather: <%= data1.weather[0].description %></p>
-          </div>
-          <% } %>
-          <% if (typeof data2 !== 'undefined' && data2.length > 0) { %>
+    <div class="errormessage">
+      <%= errorMessage %>
+    </div>
+    <!-- conditional based on whether or not there is data present to prevent empty components from displaying-->
+    <% if (typeof data1 !=='undefined' ) { %>
+      <div class="weatherdetails">
+        <h1>Weather for <%= data1.name %>
+        </h1>
+        <p>Your Location's Temperature: <%= ((data1.main.temp - 273.15) * 1.8 + 32).toFixed(2) %>°F</p>
+        <p>Your Location's Humidity: <%= data1.main.humidity %>%</p>
+        <p>Your Location's Current Weather: <%= data1.weather[0].description %>
+        </p>
+      </div>
+      <% } %>
+      <!-- conditional based on whether or not there is data present to prevent empty components from displaying-->
+        <% if (typeof data2 !=='undefined' && data2.length> 0) { %>
           <div class="coorddetails">
-            <h1> GPS Coordinates for <%= data1.name %></h1>
+            <h1> GPS Coordinates for <%= data1.name %>
+            </h1>
             <p>Your Location's Longitude: <%= data2[0].lon %></p>
             <p>Your Location's Latitude: <%= data2[0].lat %></p>
           </div>
-          </div>
-        <% } %>
-       
-          
-</div>
-      
-      
-    </main>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-  </body>
+          <% } %>
+  </main>
+</body>
