Add style to error message final cleanup up of console.logs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,15 @@
   background-color: rgb(152, 221, 150);
 }
 
+.errormessage{
+  text-align: center;
+  border-style: solid;
+  border-radius: 5px;
+  color: red;
+  border-color: red;
+  font-size: 24px;
+
+}
 
 
 .welcomebar {
