Add slight change to mobile friendly css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,8 +89,7 @@
   .coorddetails {
     width: 100%;
     float: none;
-    display: flex;
-    flex:column;
-  }
+    margin-top: 8px;
+   }
  
 }
