Fix typo in copy

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
         </h1>
         <p>Temperature: <%= ((data1.main.temp - 273.15) * 1.8 + 32).toFixed(2) %>°F</p>
         <p>Humidity: <%= data1.main.humidity %>%</p>
-        <p>Current Weather Condtions: <%= data1.weather[0].description %>
+        <p>Current Weather Conditions: <%= data1.weather[0].description %>
         </p>
       </div>
       <% } %>
